fixing floor for wrong data relation
