# docs/swagger.json
@@ -66,20 +66,6 @@
                         "name": "number",
                         "in": "formData",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "roomTypeId",
-                        "name": "roomTypeId",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "price",
-                        "name": "price",
-                        "in": "formData",
-                        "required": true
                     }
                 ],
                 "responses": {
